--- a/brushsettings.json
+++ b/brushsettings.json
@@ -120,6 +120,15 @@
             "soft_minimum": -2.0, 
             "tooltip": "The base brush radius of the current brush.  This allows you to change the behavior of a brush as you make it bigger or smaller.\nYou can even cancel-out dab size increase and adjust something else to make a brush bigger.\nTake note of dabs-per-basic radius and dabs-per-actual radius, which behave much differently."
         }, 
+            "displayed_name": "Barrel Rotation", 
+            "hard_maximum": 180.0, 
+            "hard_minimum": -180.0, 
+            "id": "barrel_rotation", 
+            "normal": 0.0, 
+            "soft_maximum": 180.0, 
+            "soft_minimum": -180.0, 
+            "tooltip": "Barrel rotation of Stylus. 0 when not twisted +90 when twisted clockwise 90 degrees, -90 when twisted counterclockwise."
+        }, 
         {
             "displayed_name": "Custom", 
             "hard_maximum": null, 
@@ -647,6 +656,7 @@
         "direction_angle_dx",
         "direction_angle_dy",
         "attack_angle",
-        "flip"
+        "flip",
+        "barrel_rotation"
     ]
 }
