--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ environment:
       MSYSTEM: MINGW64
 
 build_script:
-  - '%APPVEYOR_BUILD_FOLDER%\appveyor.bat'
+  - sh: '%APPVEYOR_BUILD_FOLDER%\appveyor.sh'
 
 on_finish:
   - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
