--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,15 @@ environment:
     # - MSYS2_ARCH: i686
     #   MSYSTEM: MINGW32
 
+image: Visual Studio 2015
+
+init:
+  - PATH C:\msys64\%MSYSTEM%\bin;C:\msys64\usr\bin;C:\msys64\bin;%PATH%
+
 build_script:
   - bash '%APPVEYOR_BUILD_FOLDER%\appveyor.sh'
+
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
 deploy: off
